--- a/EnviroNotify/EnviroNotify.csproj
+++ b/EnviroNotify/EnviroNotify.csproj
@@ -22,6 +22,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
+      <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
       <PackageReference Include="WebPush" Version="1.0.12" />
     </ItemGroup>
 
