--- a/EnviroNotify.Dashboard/EnviroNotify.Dashboard.csproj
+++ b/EnviroNotify.Dashboard/EnviroNotify.Dashboard.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <AssemblyName>EnviroNotify.Dashboard</AssemblyName>
+        <RootNamespace>EnviroNotify.Dashboard</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
