--- a/EnviroNotify.Dashboard/EnviroNotify.Dashboard.csproj
+++ b/EnviroNotify.Dashboard/EnviroNotify.Dashboard.csproj
@@ -25,6 +25,7 @@
       </PackageReference>
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
       <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
+      <PackageReference Include="Syncfusion.EJ2.AspNet.Core" Version="24.1.43" />
       <PackageReference Include="WebPush" Version="1.0.12" />
     </ItemGroup>
 
