--- a/EnviroNotify.Dashboard/EnviroNotify.Dashboard.csproj
+++ b/EnviroNotify.Dashboard/EnviroNotify.Dashboard.csproj
@@ -13,6 +13,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Hangfire.AspNetCore" Version="1.8.7" />
+      <PackageReference Include="Hangfire.Mongo" Version="1.9.15" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
         <PrivateAssets>all</PrivateAssets>
@@ -25,7 +27,13 @@
       </PackageReference>
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
       <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
       <PackageReference Include="WebPush" Version="1.0.12" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\EnviroNotify.Shared\EnviroNotify.Shared.csproj" />
     </ItemGroup>
     
 </Project>
