--- a/EnviroNotify.RaspberryPi/EnviroNotify.RaspberryPi.csproj
+++ b/EnviroNotify.RaspberryPi/EnviroNotify.RaspberryPi.csproj
@@ -8,6 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Hangfire.AspNetCore" Version="1.8.7" />
+      <PackageReference Include="Hangfire.Mongo" Version="1.9.15" />
       <PackageReference Include="Iot.Device.Bindings" Version="3.1.0" />
       <PackageReference Include="System.Device.Gpio" Version="3.1.0" />
     </ItemGroup>
