--- a/EnviroNotify.RaspberryPi/EnviroNotify.RaspberryPi.csproj
+++ b/EnviroNotify.RaspberryPi/EnviroNotify.RaspberryPi.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="System.Device.Gpio" Version="3.1.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\EnviroNotify.Shared\EnviroNotify.Shared.csproj" />
+    </ItemGroup>
+
 </Project>
